--- a/prometheus-side/prometheus.yml
+++ b/prometheus-side/prometheus.yml
@@ -16,4 +16,5 @@ scrape_configs:
     scrape_interval: 5s
 
     static_configs:
-      - targets: ['localhost:9090']
+      - targets:
+          - 192.168.33.11:9100
